add DRY to slide 1 and move tdd text

--- a/template/video.html
+++ b/template/video.html
@@ -29,13 +29,18 @@
           }
 
           &#tdd_text {
-            top: 500px;
+            top: 400px;
             left: 100px;
           }
 
           &#oop_text {
             top: 250px;
             left: 350px;
+          }
+
+          &#dry_text {
+            top: 450px;
+            left: -350px;
           }
         }
       }
@@ -64,8 +69,9 @@
 
       <div class="slide hide" data-slide="1">
         <div id="agile_text" class="text" style="--delay: 100ms">Agile</div>
-        <div id="tdd_text" class="text" style="--delay: 1000ms">TDD</div>
-        <div id="oop_text" class="text" style="--delay: 1900ms">OOP</div>
+        <div id="tdd_text" class="text" style="--delay: 800ms">TDD</div>
+        <div id="oop_text" class="text" style="--delay: 1500ms">OOP</div>
+        <div id="dry_text" class="text" style="--delay: 2200ms">DRY</div>
       </div>
 
 
