--- a/template/video.html
+++ b/template/video.html
@@ -12,12 +12,60 @@
           opacity: 1;
         }
       }
+      @keyframes partialFadeIn {
+        to {
+          opacity: 0.14;
+        }
+      }
+      @keyframes partialFadeOut {
+        from {
+          opacity: 0.014;
+        }
+        to {
+          opacity: 0.009;
+        }
+      }
       @keyframes dash {
         to {
           stroke-dashoffset: 0;
         }
       }
+      @keyframes draw {
+        from {
+          stroke-dashoffset: 117;
+        }
+        to {
+          stroke-dashoffset: 0;
+        }
+      }
+      .slide.flex {
+        display: flex;
+        justify-content: center;
+        position: relative;
+
+        img.bg {
+          position: absolute;
+          height: 100%;
+          z-index: 24;
+          opacity: 0.009;
+          animation: partialFadeOut 1500ms ease both;
+        }
+
+        div.content {
+          display: flex;
+          justify-content: center;
+          position: absolute;
+          height: 100%;
+          width: 100%;
+          z-index: 22;
+        }
+      }
       .slide.flex[data-slide="1"] {
+        img.bg {
+          animation: partialFadeIn 1400ms ease both;
+        }
+      }
+      .slide.flex[data-slide="2"] {
         div.text {
           position: relative;
           opacity: 0;
@@ -44,7 +92,7 @@
           }
         }
       }
-      .slide.flex[data-slide="2"] {
+      .slide.flex[data-slide="3"] {
         .path {
           stroke-dasharray: 1000;
           stroke-dashoffset: 1000;
@@ -52,6 +100,16 @@
         }
         .dashed{
           stroke-dasharray: 8,15;
+        }
+        #left_x {
+          stroke-dasharray: 117;
+          stroke-dashoffset: 117;
+          animation: draw 400ms ease 400ms forwards;
+        }
+        #right_x {
+          stroke-dasharray: 117;
+          stroke-dashoffset: 117;
+          animation: draw 800ms ease 800ms forwards;
         }
         div.text {
           font-size: 28pt;
@@ -64,38 +122,49 @@
     <div id="canvas">
 
 
-
-
-
       <div class="slide hide" data-slide="1">
-        <div id="agile_text" class="text" style="--delay: 100ms">Agile</div>
-        <div id="tdd_text" class="text" style="--delay: 800ms">TDD</div>
-        <div id="oop_text" class="text" style="--delay: 1500ms">OOP</div>
-        <div id="dry_text" class="text" style="--delay: 2200ms">DRY</div>
+        <div class="content">&nbsp;</div>
+        <img class="bg" src="./images/anime-bg.png" alt="bg" />
+      </div>
+
+
+      <div class="slide hide" data-slide="2">
+        <div class="content">
+          <div id="agile_text" class="text" style="--delay: 100ms">Agile</div>
+          <div id="tdd_text" class="text" style="--delay: 800ms">TDD</div>
+          <div id="oop_text" class="text" style="--delay: 1500ms">OOP</div>
+          <div id="dry_text" class="text" style="--delay: 2200ms">DRY</div>
+        </div>
+        <img class="bg" src="./images/anime-bg.png" alt="bg" />
       </div>
 
 
 
 
 
-      <div class="slide hide" data-slide="2">
-        <div class="text">Reasons</div>
-        <div id="image">
-          <svg
-             width="400"
-             height="200"
-             viewBox="0 0 1024 200"
-             version="1.1"
-             id="svg1"
-             xmlns="http://www.w3.org/2000/svg"
-             xmlns:svg="http://www.w3.org/2000/svg">
-            <g id="layer1">
-              <path d="M 44,95 C 356.98042,279.51726 430.67142,73.77422 624,37 803.0894,2.9343 854,107 987,96" fill="none" stroke="currentColor" stroke-width="5" stroke-linejoin="round" class="path" />
-              <path d="M 44,95 C 356.98042,279.51726 430.67142,73.77422 624,37 803.0894,2.9343 854,107 987,96" fill="none" stroke="black" stroke-width="5" class="dashed" />
-            </g>
-          </svg>
+      <div class="slide hide" data-slide="3">
+        <div class="content">
+          <div class="text">Reasons</div>
+          <div id="image">
+            <svg
+               width="400"
+               height="200"
+               viewBox="0 0 1024 200"
+               version="1.1"
+               id="svg1"
+               xmlns="http://www.w3.org/2000/svg"
+               xmlns:svg="http://www.w3.org/2000/svg">
+              <g id="layer1">
+                <path d="M 44,95 C 356.98042,279.51726 430.67142,73.77422 624,37 803.0894,2.9343 854,107 987,96" fill="none" stroke="currentColor" stroke-width="5" stroke-linejoin="round" class="path" />
+                <path d="M 44,95 C 356.98042,279.51726 430.67142,73.77422 624,37 803.0894,2.9343 854,107 987,96" fill="none" stroke="black" stroke-width="5" class="dashed" />
+                <path d="M 481,35 541,135" id="left_x" stroke="rgba(255, 0, 0, 0.8)" stroke-width="15" />
+                <path d="M 541,35 481,135" id="right_x" stroke="rgba(255, 0, 0, 0.8)" stroke-width="15" />
+              </g>
+            </svg>
+          </div>
+          <div class="text">Responsibilities</div>
         </div>
-        <div class="text">Responsibilities</div>
+        <img class="bg" src="./images/anime-bg.png" alt="bg" />
       </div>
 
 
