--- a/template/v.html
+++ b/template/v.html
@@ -72,26 +72,12 @@
 
 
 
-          <section class="slide" data-appearevent="slidechanged" data-autoappear="true" data-slide="2" data-background-image="./images/anime-bg.png" data-background-opacity="0.02" data-background-size="900px">
-            <div id="agile_text" class="animate__fadeIn">Agile</div>
-            <div id="tdd_text" class="animate__fadeIn">TDD</div>
-            <div id="oop_text" class="animate__fadeIn">OOP</div>
-            <div id="dry_text" class="animate__fadeIn">DRY</div>
-          </section>
-
-
-
-
-
-
           <section class="slide" data-appearevent="slidechanged" data-autoappear="true" data-slide="2" data-background-image="./images/anime-bg.png" data-background-opacity="0.02" data-background-size="900px" style="display: block;">
             <div style="display: grid; text-align: left; width: 80%;">
               <h4 style="margin: 100px auto 0;">Single Responsibility Principle</h4>
               <ul style="font-size: 26pt; list-style-type: none;">
-                <li class="animate__fadeInDown">referenced often</li>
-                <li class="animate__fadeInDown">never fully explained</li>
+                <li class="animate__fadeInDown">referenced all the time</li>
                 <li class="animate__fadeInDown">always explained the same way</li>
-                <li class="animate__fadeInDown">vague and ambiguous language</li>
               </ul>
             </div>
           </section>
@@ -102,12 +88,11 @@
 
           <section class="slide" data-appearevent="slidechanged" data-autoappear="true" data-slide="2" data-background-image="./images/anime-bg.png" data-background-opacity="0.02" data-background-size="900px" style="display: block;">
             <div style="display: grid; text-align: left; width: 80%;">
-              <h4 style="margin: 100px auto 0;">what to expect</h4>
+              <h4 style="margin: 100px auto 0;">goals</h4>
               <ul style="font-size: 26pt; list-style-type: none;">
-                <li class="animate__fadeInDown">not a refactoring video</li>
-                <li class="animate__fadeInDown">how to identify responsibilities</li>
-                <li class="animate__fadeInDown">what to separate</li>
-                <li class="animate__fadeInDown">not how to separate</li>
+                <li class="animate__fadeInDown">what is a responsibility</li>
+                <li class="animate__fadeInDown">...</li>
+                <li class="animate__fadeInDown">profit</li>
               </ul>
             </div>
           </section>
@@ -141,26 +126,15 @@
 
 
 
-          <section data-autoappear="true" class="slide" data-slide="3" data-background-image="./images/anime-bg.png" data-background-opacity="0.02" data-background-size="900px">
-            <div class="content valign-middle">
-              <div class="text animate__fadeInLeft" style="position: relative; top: 70px;">Responsibilities</div>
-              <div id="image" class="animate__fadeIn" data-delay="2000">
-                <svg
-                   width="400"
-                   height="200"
-                   viewBox="0 0 1024 200"
-                   version="1.1"
-                   id="svg1"
-                   xmlns="http://www.w3.org/2000/svg"
-                   xmlns:svg="http://www.w3.org/2000/svg">
-                  <g id="layer1">
-                    <path d="M 44,95 C 356.98042,279.51726 430.67142,73.77422 624,37 803.0894,2.9343 854,107 987,96" fill="none" stroke="white" stroke-width="5" class="dashed" />
-                    <path d="M 481,35 541,135" id="left_x" stroke="rgba(255, 0, 0, 0.8)" stroke-width="15" />
-                    <path d="M 541,35 481,135" id="right_x" stroke="rgba(255, 0, 0, 0.8)" stroke-width="15" />
-                  </g>
-                </svg>
-              </div>
-              <div class="text animate__fadeInRight" data-delay="-1000" data-fragment-index="1" style="position: relative; top: 70px;">Reasons to Change</div>
+          <section class="slide" data-slide="2" data-background-image="./images/anime-bg.png" data-background-opacity="0.02" data-background-size="900px" style="display: block;">
+            <div style="display: grid; text-align: left; width: 80%;">
+              <h4 style="margin: 100px auto 0;">Single Responsibility Principle</h4>
+              <ul style="font-size: 26pt; list-style-type: none;">
+                <li class="animate__fadeInDown">ambiguous terms</li>
+                <li class="animate__fadeInDown">lack context</li>
+                <li class="animate__fadeInDown">what is a reason to change?</li>
+                <li class="animate__fadeInDown">how is it related to responsibilities?</li>
+              </ul>
             </div>
           </section>
 
@@ -170,24 +144,14 @@
 
           <section class="slide" data-background-image="./images/anime-bg.png" data-background-opacity="0.02" data-background-size="900px">
             <div style="display: grid; text-align: left; width: 80%;">
-              <h4 style="margin: 100px auto 0;">sometimes...i read books</h4>
               <h5 style="margin: 100px auto 0; font-weight: lighter;">Agile Software Development: Principles, Patterns, and Practices</h5>
-              <div class="fragment" style="margin: 20px auto; text-align: center;">
+              <div style="margin: 20px auto; text-align: center;">
                 <h5 style="margin: 0 auto 0; font-weight: lighter; font-style: italic;">Robert Martin</h5>
                 <h5 style="margin: 0 auto 0; font-weight: lighter; font-style: italic;">(aka "Uncle Bob")</h5>
               </div>
             </div>
           </section>
 
-
-
-
-
-
-          <section class="slide" data-background-image="./images/anime-bg.png" data-background-opacity="0.02" data-background-size="900px">
-            <div style="display: grid; text-align: left; width: 80%;">
-              <h4 style="margin: 200px auto 0;">example time</h4>
-          </section>
 
 
 
